@@ -32,7 +32,9 @@
 
 #include <algorithm>
 #include <chrono>
+#include <string>
 #include <thread>
+#include <unordered_set>
 
 #include "ApplicationFeatures/ApplicationServer.h"
 #include "Basics/FileUtils.h"
@@ -187,53 +189,6 @@ arangodb::Result checkHttpResponse(arangodb::httpclient::SimpleHttpClient& clien
                      (originalRequest.empty() ? "" : "' with this payload: '" + originalRequest + "'")};
   }
   return {TRI_ERROR_NO_ERROR};
-}
-
-/// @brief Sort collections for proper recreation order
-bool sortCollectionsForCreation(VPackBuilder const& l, VPackBuilder const& r) {
-  VPackSlice const left = l.slice().get("parameters");
-  VPackSlice const right = r.slice().get("parameters");
-
-  std::string leftName =
-      arangodb::basics::VelocyPackHelper::getStringValue(left, "name", "");
-  std::string rightName =
-      arangodb::basics::VelocyPackHelper::getStringValue(right, "name", "");
-
-  // First we sort by shard distribution.
-  // We first have to create the collections which have no dependencies.
-  // NB: Dependency graph has depth at most 1, no need to manage complex DAG
-  VPackSlice leftDist = left.get(arangodb::StaticStrings::DistributeShardsLike);
-  VPackSlice rightDist = right.get(arangodb::StaticStrings::DistributeShardsLike);
-  if (leftDist.isNone() && rightDist.isString() &&
-      rightDist.copyString() == leftName) {
-    return true;
-  }
-  if (rightDist.isNone() && leftDist.isString() &&
-      leftDist.copyString() == rightName) {
-    return false;
-  }
-
-  // Next we sort by collection type so that vertex collections are recreated
-  // before edge, etc.
-  int leftType =
-      arangodb::basics::VelocyPackHelper::getNumericValue<int>(left, "type", 0);
-  int rightType =
-      arangodb::basics::VelocyPackHelper::getNumericValue<int>(right, "type", 0);
-  if (leftType != rightType) {
-    return leftType < rightType;
-  }
-
-  // Finally, sort by name so we have stable, reproducible results
-  // Sort system collections first
-  if (!leftName.empty() && leftName[0] == '_' &&
-      !rightName.empty() && rightName[0] != '_') {
-    return true;
-  }
-  if (!leftName.empty() && leftName[0] != '_' &&
-      !rightName.empty() && rightName[0] == '_') {
-    return false;
-  }
-  return strcasecmp(leftName.c_str(), rightName.c_str()) < 0;
 }
 
 void makeAttributesUnique(arangodb::velocypack::Builder& builder,
@@ -789,7 +744,7 @@ arangodb::Result processInputDirectory(
     }
 
     // order collections so that prototypes for distributeShardsLike come first
-    std::sort(collections.begin(), collections.end(), ::sortCollectionsForCreation);
+    arangodb::RestoreFeature::sortCollectionsForCreation(collections);
 
     std::unique_ptr<arangodb::RestoreFeature::RestoreMainJob> usersData;
     std::unique_ptr<arangodb::RestoreFeature::RestoreMainJob> analyzersData;
@@ -990,6 +945,85 @@ void processJob(arangodb::httpclient::SimpleHttpClient& client, arangodb::Restor
 }  // namespace
 
 namespace arangodb {
+
+/// @brief Sort collections for proper recreation order
+void RestoreFeature::sortCollectionsForCreation(std::vector<VPackBuilder>& collections) {
+  enum class Rel {
+    Less,
+    Equal,
+    Greater,
+  };
+
+  // use an existing operator<() to get a Rel
+  auto constexpr cmp = [](auto const& left, auto const& right) -> Rel {
+    if (left < right) {
+      return Rel::Less;
+    } else if (right < left) {
+      return Rel::Greater;
+    } else {
+      return Rel::Equal;
+    }
+  };
+
+  // project both values via supplied function before comparison
+  auto const cmpBy = [&cmp](auto const& projection, auto const& left, auto const& right) {
+    return cmp(projection(left), projection(right));
+  };
+
+  // Orders distributeShardsLike-followers after (all) other collections,
+  // apart from that imposes no additional ordering.
+  auto constexpr dslFollowerToOrderedValue = [](auto const& slice) {
+    return !slice.get(StaticStrings::DistributeShardsLike).isNone();
+  };
+
+  // Orders document collections before edge collections,
+  // apart from that imposes no additional ordering.
+  auto constexpr typeToOrderedValue = [](auto const& slice) {
+    // If type is not set, default to document collection (2). Edge collections
+    // are 3.
+    return basics::VelocyPackHelper::getNumericValue<int>(slice, StaticStrings::DataSourceType, 2);
+  };
+
+  // Orders system collections before other collections,
+  // apart from that imposes no additional ordering.
+  auto constexpr systemToOrderedValue = [](auto const& name) {
+    auto isSystem = name.at(0) == '_';
+    return isSystem ? 0 : 1;
+  };
+
+  auto const chainedComparison = [&](auto const& left, auto const& right) -> Rel {
+    auto const leftName = left.get(StaticStrings::DataSourceName).copyString();
+    auto const rightName = right.get(StaticStrings::DataSourceName).copyString();
+    if (auto cmpRes = cmpBy(dslFollowerToOrderedValue, left, right); cmpRes != Rel::Equal) {
+      return cmpRes;
+    }
+    if (auto cmpRes = cmpBy(typeToOrderedValue, left, right); cmpRes != Rel::Equal) {
+      return cmpRes;
+    }
+    if (auto cmpRes = cmpBy(systemToOrderedValue, leftName, rightName); cmpRes != Rel::Equal) {
+      return cmpRes;
+    }
+
+    auto res = strcasecmp(leftName.c_str(), rightName.c_str());
+    auto cmpRes = Rel{};
+    if (res < 0) {
+      cmpRes =  Rel::Less;
+    } else if (res > 0) {
+      cmpRes = Rel::Greater;
+    } else {
+      cmpRes = Rel::Equal;
+    }
+    return cmpRes;
+  };
+
+  auto const colLesserThan = [&](auto const& l, auto const& r) {
+    auto const left = l.slice().get(StaticStrings::DataSourceParameters);
+    auto const right = r.slice().get(StaticStrings::DataSourceParameters);
+    return chainedComparison(left, right) == Rel::Less;
+  };
+
+  std::sort(collections.begin(), collections.end(), colLesserThan);
+}
 
 std::vector<RestoreFeature::DatabaseInfo> RestoreFeature::determineDatabaseList(std::string const& databaseName) {
   std::vector<RestoreFeature::DatabaseInfo> databases;
